SUBDIRS = \
	\
	emu \
	timing
	
AM_CPPFLAGS = \
	\
	-I$(srcdir)/abc_with_bb_support/src/base/io \
	-I$(srcdir)/abc_with_bb_support/src/base/abc \
	-I$(srcdir)/abc_with_bb_support/src/base/main \
	-I$(srcdir)/abc_with_bb_support/src/base/cmd \
	-I$(srcdir)/abc_with_bb_support/src/misc/vec \
	-I$(srcdir)/abc_with_bb_support/src/misc/util \
	-I$(srcdir)/abc_with_bb_support/src/misc/st \
	-I$(srcdir)/abc_with_bb_support/src/misc/extra \
	-I$(srcdir)/abc_with_bb_support/src/misc/ext \
	-I$(srcdir)/abc_with_bb_support/src/misc/espresso \
	-I$(srcdir)/abc_with_bb_support/src/misc/avl \
	-I$(srcdir)/abc_with_bb_support/src/misc/nm \
	-I$(srcdir)/abc_with_bb_support/src/aig/aig \
	-I$(srcdir)/abc_with_bb_support/src/aig/hop \
	-I$(srcdir)/abc_with_bb_support/src/aig/mem \
	-I$(srcdir)/abc_with_bb_support/src/aig/tim \
	-I$(srcdir)/abc_with_bb_support/src/aig/ssw \
	-I$(srcdir)/abc_with_bb_support/src/aig/fra \
	-I$(srcdir)/abc_with_bb_support/src/aig/nwk \
	-I$(srcdir)/abc_with_bb_support/src/aig/ntl \
	-I$(srcdir)/abc_with_bb_support/src/aig/gia \
	-I$(srcdir)/abc_with_bb_support/src/aig/dar \
	-I$(srcdir)/abc_with_bb_support/src/aig/ioa \
	-I$(srcdir)/abc_with_bb_support/src/bdd/cudd \
	-I$(srcdir)/abc_with_bb_support/src/bdd/mtr \
	-I$(srcdir)/abc_with_bb_support/src/bdd/epd \
	-I$(srcdir)/abc_with_bb_support/src/map/if \
	-I$(srcdir)/abc_with_bb_support/src/sat/bsat

LDADD =  -L$(srcdir)/abc_with_bb_support/libabc.a
